ci: add markdownlint problem matcher

--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -9,6 +9,7 @@ on:
       - yarn.lock
       - '*.md'
       - .github/workflows/markdown-lint.yml
+      - .github/workflows/markdownlint-problem-matcher.json
 
 
 jobs:
@@ -30,4 +31,5 @@ jobs:
 
       - name: Lint markdown files
         run: |
+          echo "::add-matcher::.github/workflows/markdownlint-problem-matcher.json"
           yarn lint:md
