--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "filecheck": "env-cmd --silent cross-env CONTENT_ROOT=files yari-filecheck --cwd=.",
     "content": "env-cmd --silent cross-env CONTENT_ROOT=files yari-tool",
     "build": "env-cmd --silent cross-env CONTENT_ROOT=files BUILD_OUT_ROOT=build yari-build",
+    "fix:md": "npm run lint:md -- --fix",
     "lint:md": "markdownlint \"**/*.md\" -i node_modules"
   },
   "dependencies": {
