chore: make Markdownlint a dependency and script (#12316)
* chore: make Markdownlint a dependency and script

* ci: add markdownlint problem matcher

* chore: expand Markdownlint glob to all files

* chore: add fix:md target to fix Markdownlint

* chore: upgrade markdownlint-cli 0.32.2

Disable new failing rules

--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -5,8 +5,11 @@ on:
     branches:
       - main
     paths:
-      - '*.md'
+      - .markdownlint.json
+      - yarn.lock
+      - '**/*.md'
       - .github/workflows/markdown-lint.yml
+      - .github/workflows/markdownlint-problem-matcher.json
 
 
 jobs:
@@ -22,6 +25,11 @@ jobs:
           node-version: "16"
           cache: yarn
 
+      - name: Install all yarn packages
+        run: |
+          yarn --frozen-lockfile
+
       - name: Lint markdown files
         run: |
-          npx markdownlint-cli '*.md' -i LICENSE.md -i CODE_OF_CONDUCT.md
+          echo "::add-matcher::.github/workflows/markdownlint-problem-matcher.json"
+          yarn lint:md
