--- a/.github/workflows/pr-check_markdownlint.yml
+++ b/.github/workflows/pr-check_markdownlint.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v29.0.0
+        with:
+          files: |
+            **/*.md
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
