--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "up-to-date-check": "node scripts/up-to-date-check.js",
-    "start": "yarn up-to-date-check && env-cmd --silent cross-env CONTENT_ROOT=files REACT_APP_DISABLE_AUTH=true BUILD_OUT_ROOT=build yari-server",
-    "filecheck": "env-cmd --silent cross-env CONTENT_ROOT=files yari-filecheck --cwd=.",
-    "content": "env-cmd --silent cross-env CONTENT_ROOT=files yari-tool",
     "build": "env-cmd --silent cross-env CONTENT_ROOT=files BUILD_OUT_ROOT=build yari-build",
+    "content": "env-cmd --silent cross-env CONTENT_ROOT=files yari-tool",
+    "filecheck": "env-cmd --silent cross-env CONTENT_ROOT=files yari-filecheck --cwd=.",
     "fix:md": "npm run lint:md -- --fix",
-    "lint:md": "markdownlint \"**/*.md\" -i node_modules"
+    "fix:json": "prettier -w \"**/*.json\"",
+    "lint:md": "markdownlint \"**/*.md\" -i node_modules",
+    "lint:json": "prettier -c \"**/*.json\"",
+    "start": "yarn up-to-date-check && env-cmd --silent cross-env CONTENT_ROOT=files REACT_APP_DISABLE_AUTH=true BUILD_OUT_ROOT=build yari-server",
+    "up-to-date-check": "node scripts/up-to-date-check.js"
   },
   "dependencies": {
     "@mdn/yari": "1.17.0",
     "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
-    "markdownlint-cli": "0.32.2"
+    "markdownlint-cli": "0.32.2",
+    "prettier": "2.7.1"
   }
 }
