chore: migrate to markdownlint-cli2

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "content": "env-cmd --silent cross-env CONTENT_ROOT=files yari-tool",
     "filecheck": "env-cmd --silent cross-env CONTENT_ROOT=files yari-filecheck --cwd=.",
     "fix:json": "prettier -w \"**/*.json\"",
-    "fix:md": "npm run lint:md -- --fix",
+    "fix:md": "markdownlint-cli2-fix \"**/*.md\"",
     "fix:yml": "prettier -w \"**/*.yml\"",
     "lint:json": "prettier -c \"**/*.json\"",
-    "lint:md": "markdownlint \"**/*.md\" -i node_modules -r markdownlint-rule-search-replace",
+    "lint:md": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "prettier -c \"**/*.yml\"",
     "start": "yarn up-to-date-check && env-cmd --silent cross-env CONTENT_ROOT=files REACT_APP_DISABLE_AUTH=true BUILD_OUT_ROOT=build yari-server",
     "up-to-date-check": "node scripts/up-to-date-check.js"
@@ -23,7 +23,7 @@
     "@mdn/yari": "1.18.14",
     "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
-    "markdownlint-cli": "0.32.2",
+    "markdownlint-cli2": "0.5.1",
     "markdownlint-rule-search-replace": "1.0.5",
     "prettier": "2.7.1"
   }
