--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -156,10 +156,6 @@
       ]
     }
   },
-  "customRules": [
-    "markdownlint-rule-search-replace"
-  ],
-  "ignores": [
-    "node_modules"
-  ]
+  "customRules": ["markdownlint-rule-search-replace"],
+  "ignores": ["node_modules"]
 }
