--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:json": "prettier -c \"**/*.json(c)?\"",
     "lint:md": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "prettier -c \"**/*.yml\"",
+    "prepare": "husky install",
     "start": "yarn up-to-date-check && env-cmd --silent cross-env CONTENT_ROOT=files REACT_APP_DISABLE_AUTH=true BUILD_OUT_ROOT=build yari-server",
     "up-to-date-check": "node scripts/up-to-date-check.js"
   },
@@ -23,6 +24,8 @@
     "@mdn/yari": "1.18.23",
     "cross-env": "7.0.3",
     "env-cmd": "10.1.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
     "markdownlint-cli2": "0.5.1",
     "markdownlint-rule-search-replace": "1.0.5",
     "prettier": "2.7.1"
