--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,8 @@
 build/
+
+# Ignore markdown files till full pass is made on each folder
+*.md
+
+# Folders that have been run with prettier
+!files/en-us/games/**/*.md
+!files/en-us/related/**/*.md
