--- a/.github/workflows/pr-check_markdownlint.yml
+++ b/.github/workflows/pr-check_markdownlint.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Lint markdown files
         run: |
           echo "::add-matcher::.github/workflows/markdownlint-problem-matcher.json"
-          files_to_lint="${{ steps.changed-files.outputs.all_changed_files }}"
+          files_to_lint='${{ steps.changed-files.outputs.all_changed_files }}'
+          echo "Before: $files_to_lint"
+          files_to_lint=$(echo $files_to_lint | sed -E 's/([()])/\\\1/g')
+          echo "After: $files_to_lint"
           yarn markdownlint-cli2 ${files_to_lint}
