--- a/.github/workflows/markdown-lint-fix.yml
+++ b/.github/workflows/markdown-lint-fix.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Lint markdown files
         run: |
-          yarn lint:md
+          yarn fix:md
 
       - name: Create PR with only fixable issues
         if: success()
