--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,7 +5,7 @@ contact_links:
     about: Will the issue require some discussion to define actionable tasks? Consider starting a discussion first.
   - name: MDN Web Docs on Discourse
     url: https://discourse.mozilla.org/c/mdn/learn/250
-    about: Need help with assesments on MDN Web Docs? We have a support community for this purpose on Discourse.
+    about: Need help with assessments on MDN Web Docs? We have a support community for this purpose on Discourse.
   - name: Help with code
     url: https://stackoverflow.com/
     about: If you are stuck and need help with code, StackOverflow is a great resource.
