--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: true
 contact_links:
   - name: MDN GitHub Discussions
     url: https://github.com/orgs/mdn/discussions
-    about: Will the issue require some discussion to define actionable tasks? Consider starting a discussion first.
+    about: Does the issue involve a lot of pages, or are you not sure how it can be split into actionable tasks? Consider starting a discussion first.
   - name: MDN Web Docs on Discourse
     url: https://discourse.mozilla.org/c/mdn/learn/250
     about: Need help with assessments on MDN Web Docs? We have a support community for this purpose on Discourse.
